--- a/计算机/设计工具/php/框架/fastadmin.org
+++ b/计算机/设计工具/php/框架/fastadmin.org
@@ -1,177 +1,278 @@
 * TODO
-fastadmin：以TP5为基础的，把框架里免费的插件安装上学一学，开发文档看完，跟着操作一遍，多写写API接口；
+fastadmin：以 TP5 为基础的，把框架里免费的插件安装上学一学，开发文档看完，跟着操作一遍，多写写 API 接口；
 
 第六天：了解一些并发、缓存、数据库优化等知识；
-第七天：看看网上大神的PHP技能树进阶，准备一份看起来还行的简历，等面试吧；
+第七天：看看网上大神的 PHP 技能树进阶，准备一份看起来还行的简历，等面试吧；
 
 
 
-* fastadmin
 https://doc.fastadmin.net/doc/178.html
 
-** 命令
-*** 生成CURD (控制器，model，和菜单)
+* fastadmin
+FastAdmin 是一款基于 ThinkPHP5+Bootstrap 的快速后台开发框架
 
-常用命令
---force=true
+** 主要特征
+   
+   - 基于 Auth 验证的权限管理系统
+     - 支持无限级父子级权限继承，父级的管理员可任意增删改子级管理员及权限设置
+     - 支持单管理员多角色
+     - 支持管理子级数据或个人数据
 
-``` shell
-//生成fa_test表的CRUD
-php think crud -t test
+   - 强大的一键生成功能
+     - 一键生成 CRUD,包括控制器、模型、视图、JS、语言包、菜单、回收站等
+     - 一键压缩打包 JS 和 CSS 文件，一键 CDN 静态资源部署
+     - 一键生成控制器菜单和规则
+     - 一键生成 API 接口文档
 
-//生成fa_test表的CRUD且一键生成菜单
-php think crud -t test -u 1
+   - 完善的前端功能组件开发
+     - 基于 AdminLTE 二次开发
+     - 基于 Bootstrap 开发，自适应手机、平板、PC
+     - 基于 RequireJS 进行 JS 模块管理，按需加载
+     - 基于 Less 进行样式开发
 
-//删除fa_test表生成的CRUD
-php think crud -t test -d 1
+   - 强大的应用插件扩展功能，在线安装卸载升级应用插件
+   - 通用的会员模块和 API 模块
+   - 共用同一账号体系的 Web 端会员中心权限验证和 API 接口会员权限验证
+   - 二级域名部署支持，同时域名支持绑定到插件
+   - 多语言支持，服务端及客户端支持
+   - 支持大文件分片上传、分片直传、剪切板粘贴上传、拖拽上传，进度条显示，图片上传前压缩
+   - 支持列表跨页选择记忆、分页大小记忆、左右固定列
+   - 强大的第三方应用模块支持(CMS、博客、知识付费问答、在线投票系统、移动端商城系统、活动报名预约系统)
+   - 支持 CMS、博客、知识付费问答无缝整合 Xunsearch 全文搜索
+   - 第三方小程序支持(CMS 小程序、预订小程序、问答小程序、活动报名小程序、商城小程序、博客小程序)
+   - 整合第三方短信接口(阿里云、腾讯云短信)
+   - 无缝整合第三方云存储(七牛云、阿里云 OSS、又拍云)功能
+   - 第三方富文本编辑器支持(Summernote、Kindeditor、百度编辑器)
+   - 第三方登录(QQ、微信、微博)整合
+   - 第三方支付(微信、支付宝)无缝整合，微信支持 PC 端扫码支付
+   - 丰富的插件应用市场    
 
-//生成fa_test表的CRUD且控制器生成在二级目录下
-php think crud -t test -c mydir/test
-//生成fa_test_log表的CRUD且生成对应的控制器为testlog
-php think crud -t test_log -c testlog
-//生成fa_test表的CRUD且对应的模型名为testmodel
-php think crud -t test -m testmodel
-//生成fa_test表的CRUD且生成关联模型category，外链为category_id，关联表主键为id
-php think crud -t test -r category -k category_id -p id
-//生成fa_test表的CRUD且所有以list或data结尾的字段都生成复选框
-php think crud -t test --setcheckboxsuffix=list --setcheckboxsuffix=data
-//生成fa_test表的CRUD且所有以image和img结尾的字段都生成图片上传组件
-php think crud -t test --imagefield=image --imagefield=img
-//关联多个表,参数传递时请按顺序依次传递，支持以下几个参数relation/relationmodel/relationforeignkey/relationprimarykey/relationfields/relationmode
-php think crud -t test --relation=category --relation=admin --relationforeignkey=category_id --relationforeignkey=admin_id
-//生成v_phealth_db2数据库下的fa_test表的CRUD
-php think crud -t test --db=v_phealth_db2
-```
+** 命令行
+*** 生成 CURD (控制器，model，和菜单)
+
+    常用命令
+    --force=true
+
+    ``` shell
+    //生成 fa_test 表的 CRUD
+    php think crud -t test
+
+    //生成 fa_test 表的 CRUD 且一键生成菜单
+    php think crud -t test -u 1
+
+    //删除 fa_test 表生成的 CRUD
+    php think crud -t test -d 1
+
+    //生成 fa_test 表的 CRUD 且控制器生成在二级目录下
+    php think crud -t test -c mydir/test
+    //生成 fa_test_log 表的 CRUD 且生成对应的控制器为 testlog
+    php think crud -t test_log -c testlog
+    //生成 fa_test 表的 CRUD 且对应的模型名为 testmodel
+    php think crud -t test -m testmodel
+    //生成 fa_test 表的 CRUD 且生成关联模型 category，外链为 category_id，关联表主键为 id
+    php think crud -t test -r category -k category_id -p id
+    //生成 fa_test 表的 CRUD 且所有以 list 或 data 结尾的字段都生成复选框
+    php think crud -t test --setcheckboxsuffix=list --setcheckboxsuffix=data
+    //生成 fa_test 表的 CRUD 且所有以 image 和 img 结尾的字段都生成图片上传组件
+    php think crud -t test --imagefield=image --imagefield=img
+    //关联多个表,参数传递时请按顺序依次传递，支持以下几个参数 relation/relationmodel/relationforeignkey/relationprimarykey/relationfields/relationmode
+    php think crud -t test --relation=category --relation=admin --relationforeignkey=category_id --relationforeignkey=admin_id
+    //生成 v_phealth_db2 数据库下的 fa_test 表的 CRUD
+    php think crud -t test --db=v_phealth_db2
+    ```
 
 *** 生成菜单
-``` shell
-//一键生成test控制器的权限菜单
-php think menu -c test
-//一键生成mydir/test控制器的权限菜单
-php think menu -c mydir/test
-//删除test控制器生成的菜单
-php think menu -c test -d 1
-//一键全部重新所有控制器的权限菜单
-php think menu -c all-controller
-```
+
+    //一键生成 test 控制器的权限菜单
+    php think menu -c test
+    //一键生成 mydir/test 控制器的权限菜单
+    php think menu -c mydir/test
+    //删除 test 控制器生成的菜单
+    php think menu -c test -d 1
+    //一键全部重新所有控制器的权限菜单
+    php think menu -c all-controller
+
 
 *** 压缩打包
-在FastAdmin中如果修改了核心的JS或CSS文件，是需要重新压缩打包后在生产环境下才会生效。FastAdmin采用的是基于RequireJS的r.js进行JS和CSS文件的压缩打包。
+    在 FastAdmin 中如果修改了核心的 JS 或 CSS 文件，是需要重新压缩打包后在生产环境下才会生效。FastAdmin 采用的是基于 RequireJS 的 r.js 进行 JS 和 CSS 文件的压缩打包。
 
-常用命令
-``` shell
-//一键压缩打包前后台的JS和CSS
-php think min -m all -r all
-//一键压缩打包后台的JS和CSS
-php think min -m backend -r all
-//一键压缩打包前后台的JS
-php think min -m all -r js
-//一键压缩打包后台的CSS
-php think min -m backend -r css
-//使用uglify进行一键压缩打包后台的JS文件
-php think min -m backend -r js -o uglify
-```
+    常用命令
 
-影响文件
-在调试模式和生产环境下所加载的JS和CSS是不一样的，压缩打包会重新生成生产环境下的JS和CSS文件，特别注意下。
-调试模式：
+    //一键压缩打包前后台的 JS 和 CSS
+    php think min -m all -r all
+    //一键压缩打包后台的 JS 和 CSS
+    php think min -m backend -r all
+    //一键压缩打包前后台的 JS
+    php think min -m all -r js
+    //一键压缩打包后台的 CSS
+    php think min -m backend -r css
+    //使用 uglify 进行一键压缩打包后台的 JS 文件
+    php think min -m backend -r js -o uglify
 
-``` 
-public/assets/js/require-frontend.js
-public/assets/js/require-backend.js
-public/assets/css/frontend.css
-public/assets/css/backend.css
-```
-生产环境：(打包压缩后会重新生成以下文件)
-```
-public/assets/js/require-frontend.min.js
-public/assets/js/require-backend.min.js
-public/assets/css/frontend.min.css
-public/assets/css/backend.min.css
-```
 
-*** 生成API文档
-FastAdmin中的一键生成API文档可以在命令行或后台一键生成我们API接口的接口测试文档，可以直接在线模拟接口请求，查看参数示例和返回示例。
-常用命令
-``` shell
-//一键生成API文档
-php think api --force=true
-//指定https://www.example.com为API接口请求域名,默认为空
-php think api -u https://www.example.com --force=true
-//输出自定义文件为myapi.html,默认为api.html
-php think api -o myapi.html --force=true
-//修改API模板为mytemplate.html，默认为index.html
-php think api -e mytemplate.html --force=true
-//修改标题为FastAdmin,作者为作者
-php think api -t FastAdmin -a Karson --force=true
-//查看API接口命令行帮助
-php think api -h
-```
-参数介绍
+    影响文件
+    在调试模式和生产环境下所加载的 JS 和 CSS 是不一样的，压缩打包会重新生成生产环境下的 JS 和 CSS 文件，特别注意下。
+    调试模式：
+
+
+    public/assets/js/require-frontend.js
+    public/assets/js/require-backend.js
+    public/assets/css/frontend.css
+    public/assets/css/backend.css
+
+    生产环境：(打包压缩后会重新生成以下文件)
+
+    public/assets/js/require-frontend.min.js
+    public/assets/js/require-backend.min.js
+    public/assets/css/frontend.min.css
+    public/assets/css/backend.min.css
+
+
+*** 生成 API 文档
+    FastAdmin 中的一键生成 API 文档可以在命令行或后台一键生成我们 API 接口的接口测试文档，可以直接在线模拟接口请求，查看参数示例和返回示例。
+    常用命令
+    
+    //一键生成 API 文档
+    php think api --force=true
+    //指定https://www.example.com为API接口请求域名,默认为空
+    php think api -u https://www.example.com --force=true
+    //输出自定义文件为 myapi.html,默认为 api.html
+    php think api -o myapi.html --force=true
+    //修改 API 模板为 mytemplate.html，默认为 index.html
+    php think api -e mytemplate.html --force=true
+    //修改标题为 FastAdmin,作者为作者
+    php think api -t FastAdmin -a Karson --force=true
+    //查看 API 接口命令行帮助
+    php think api -h
+   
 *** 管理插件
-``` shell
-//创建一个myaddon本地插件，常用于开发自己的插件时使用
-php think addon -a myaddon -c create
-//刷新插件缓存，如果禁用启用了插件，部分文件需要刷新才会生效
-php think addon -a example -c refresh
-//远程安装example插件
-php think addon -a example -c install
-//卸载本地的example插件
-php think addon -a example -c uninstall
-//启用本地的example插件
-php think addon -a example -c enable
-//禁用本地的example插件
-php think addon -a example -c disable
-//升级本地的example插件
-php think addon -a example -c upgrade
-//将本地的example插件打包成zip文件
-php think addon -a example -c package
-``` 
 
-*** 安装FastAdmin
-常用命令
-``` shell
-//一键安装FastAdmin
-php think install
-//配置数据库连接地址为127.0.0.1
-php think install -a 127.0.0.1
-//配置数据库用户名密码
-php think install -u root -p 123456
-//配置数据库表名为dbname
-php think install -d dbname
-//配置数据库表前缀为ff_
-php think install -r ff_
-//强制重新安装FastAdmin
-php think install -f 1
-```
+    //创建一个 myaddon 本地插件，常用于开发自己的插件时使用
+    php think addon -a myaddon -c create
+    //刷新插件缓存，如果禁用启用了插件，部分文件需要刷新才会生效
+    php think addon -a example -c refresh
+    //远程安装 example 插件
+    php think addon -a example -c install
+    //卸载本地的 example 插件
+    php think addon -a example -c uninstall
+    //启用本地的 example 插件
+    php think addon -a example -c enable
+    //禁用本地的 example 插件
+    php think addon -a example -c disable
+    //升级本地的 example 插件
+    php think addon -a example -c upgrade
+    //将本地的 example 插件打包成 zip 文件
+    php think addon -a example -c package
+
+
+*** 安装 FastAdmin
+
+    //一键安装 FastAdmin
+    php think install
+    //配置数据库连接地址为 127.0.0.1
+    php think install -a 127.0.0.1
+    //配置数据库用户名密码
+    php think install -u root -p 123456
+    //配置数据库表名为 dbname
+    php think install -d dbname
+    //配置数据库表前缀为 ff_
+    php think install -r ff_
+    //强制重新安装 FastAdmin
+    php think install -f 1
+
+    
+** 架构
+  file:../images/fastadmin-jiagou.png
+  
+*** 应用模块  
+    在 FastAdmin 中默认有四个应用模块：admin、api、common、index
+    
+    后台模块(admin)是 FastAdmin 中的核心模块，后台模块又分为系统配置、附件管理、分类管理、插件管理等多个功能模块，更多的功能模块可以在插件管理中自由的安装和卸载
+    
+    后台的前端是基于 AdminLTE 和 Bootstrap 进行了大量二次开发，采用 RequireJS 进行 JS 模块化管理和加载。
+   
+    公共模块(common)是一个特殊的模块，默认是禁止直接访问的，一般用于放置一些公共的类或其它模块的继承基类等。
+
+    Api 模块(api)通常用于对接 APP，用于向 APP 提供接口，目前 FastAdmin 暂未提供 API 相关的插件和文档，你可以直接参考 ThinkPHP5 官方的文档。
+
+*** 功能模块
+    
+    #+begin_example
+    ├── application
+    │   └── admin
+    │       ├── controller
+    │       │   └── Test.php        //控制器类
+    │       ├── lang
+    │       │   ├── zh-cn            
+    │       │   │   └── test.php    //功能语言包,按需加载
+    │       │   └── zh-cn.php        //后台语言包,默认加载
+    │       ├── model
+    │       │   └── Test.php        //模型类
+    │       ├── validate
+    │       │   └── Test.php        //验证器类
+    │       └── view
+    │           └── test            
+    │               ├── index.html   //列表视图
+    │               ├── add.html     //添加视图
+    │               └── edit.html    //编辑视图
+    └── public
+           └── assets
+                  └── js
+                        └── backend
+                               └── test.js      //功能模块JS文件
+    #+end_example
+    
+    
 ** 多语言
-``` html
-__('My name is %s', "FastAdmin");
-__('This is %s,base on %s', ['FastAdmin', 'ThinkPHP5']);
-```
+在 FastAdmin 中可以在任何位置(控制器、视图、JS)使用__('语言标识');调用语言包，如果语言标识不存在，则直接输出该语言标识
+   
+*** 使用方法
+    
+    FastAdmin 中的__函数和 ThinkPHP 中的 lang 函数在传参上有些许区别
+
+    比如
+
+    __('My name is %s', "FastAdmin");
+
+    将会返回
+
+    My name is FastAdmin
+
+    而如果采用 ThinkPHP 中的 lang 中的写法则是
+
+    lang('My name is %s', ["FastAdmin"]);
+
+    可以看到 ThinkPHP 中的第二个参数必须传入数组，而 FastAdmin 中的__则没有这个要求，其实在多个参数时 FastAdmin 会忽略掉第三个参数$lang
 
 ** 数据库
+   
+   这里提供的是数据库表字段规则在你创建表时使用，当按如下的规则进行字段命名、类型设置和备注时
+   使用 php think crud -t 表名生成 CRUD 时会自动生成对应的 HTML 元素和组件
+
 *** 根据字段类型
-| 类型 | 备注 | 类型说明 |
-|------+------+----------|
-| int       | 整型     | 自动生成type为number的文本框，步长为1                |
-| enum      | 枚举型   | 自动生成单选下拉列表框                               |
-| set       | set型    | 自动生成多选下拉列表框                               |
-| float     | 浮点型   | 自动生成type为number的文本框，步长根据小数点位数生成 |
-| text      | 文本型   | 自动生成textarea文本框                               |
-| datetime  | 日期时间 | 自动生成日期时间的组件                               |
-| date      | 日期型   | 自动生成日期型的组件                                 |
-| timestamp | 时间戳   | 自动生成日期时间的组件                               |
+    
+    | 类型      | 备注     | 类型说明                                                 |
+    |-----------+----------+----------------------------------------------------------|
+    | int       | 整型     | 自动生成 type 为 number 的文本框，步长为 1               |
+    | enum      | 枚举型   | 自动生成单选下拉列表框                                   |
+    | set       | set 型   | 自动生成多选下拉列表框                                   |
+    | float     | 浮点型   | 自动生成 type 为 number 的文本框，步长根据小数点位数生成 |
+    | text      | 文本型   | 自动生成 textarea 文本框                                 |
+    | datetime  | 日期时间 | 自动生成日期时间的组件                                   |
+    | date      | 日期型   | 自动生成日期型的组件                                     |
+    | timestamp | 时间戳   | 自动生成日期时间的组件                                   |
+
 *** 特殊字段
-| 字段         | 字段名称   | 字段类型 | 字段说明                                                                                |
-|--------------+------------+----------+-----------------------------------------------------------------------------------------|
-| category_id  | 分类ID     | int      | 将生成选择分类的下拉框,分类类型根据去掉前缀的表名，单选                                 |
-| category_ids | 多选分类ID | varchar  | 将生成选择分类的下拉框,分类类型根据去掉前缀的表名，多选                                 |
-| weigh        | 权重       | int      | 后台的排序字段，如果存在该字段将出现排序按钮，可上下拖动进行排序                        |
-| createtime   | 创建时间   | int      | 记录添加时间字段,不需要手动维护                                                         |
-| updatetime   | 更新时间   | int      | 记录更新时间的字段,不需要手动维护                                                       |
-| deletetime   | 删除时间   | int      | 记录删除时间的字段,不需要手动维护,如果存在此字段将会生成回收站功能,字段默认值务必为null |
-| status       | 状态字段   | enum     | 列表筛选字段,如果存在此字段将启用TAB选项卡展示列表                                      |
+    
+    | 字段         | 字段名称   | 字段类型 | 字段说明                                                                                |
+    |--------------+------------+----------+-----------------------------------------------------------------------------------------|
+    | category_id  | 分类 ID     | int      | 将生成选择分类的下拉框,分类类型根据去掉前缀的表名，单选                                 |
+    | category_ids | 多选分类 ID | varchar  | 将生成选择分类的下拉框,分类类型根据去掉前缀的表名，多选                                 |
+    | weigh        | 权重       | int      | 后台的排序字段，如果存在该字段将出现排序按钮，可上下拖动进行排序                        |
+    | createtime   | 创建时间   | int      | 记录添加时间字段,不需要手动维护                                                         |
+    | updatetime   | 更新时间   | int      | 记录更新时间的字段,不需要手动维护                                                       |
+    | deletetime   | 删除时间   | int      | 记录删除时间的字段,不需要手动维护,如果存在此字段将会生成回收站功能,字段默认值务必为 null |
+    | status       | 状态字段   | enum     | 列表筛选字段,如果存在此字段将启用 TAB 选项卡展示列表                                      |
 
 *** 以特殊字符结尾的规则
 
@@ -198,18 +299,18 @@ __('This is %s,base on %s', ['FastAdmin', 'ThinkPHP5']);
 | 字段   | 注释内容                  | 字段类型                | 字段说明                                                                      |
 |--------+---------------------------+-------------------------+-------------------------------------------------------------------------------|
 | status | 状态                      | int                     | 将生成普通语言包和普通文本框                                                  |
-| status | 状态                      | enum(‘0’,’1’,’2’) | 将生成普通语言包和单选下拉列表,同时生成TAB选项卡                              |
-| status | 状态:0=隐藏,1=正常,2=推荐 | enum(‘0’,’1’,’2’) | 将生成多个语言包和单选下拉列表,同时生成TAB选项卡,且列表中的值显示为对应的文字 |
+| status | 状态                      | enum(‘0’,’1’,’2’) | 将生成普通语言包和单选下拉列表,同时生成 TAB 选项卡                              |
+| status | 状态:0=隐藏,1=正常,2=推荐 | enum(‘0’,’1’,’2’) | 将生成多个语言包和单选下拉列表,同时生成 TAB 选项卡,且列表中的值显示为对应的文字 |
 ** 控制器
 
 *** 基类控制器
-FastAdmin中定义了三个基类控制器，分别位于
+FastAdmin 中定义了三个基类控制器，分别位于
 
-application/common/controller/Api.php //API接口基类控制器
+application/common/controller/Api.php //API 接口基类控制器
 application/common/controller/Backend.php //后台基类控制器
 application/common/controller/Frontend.php //前台基类控制器
 
-基类中所定义的方法如下，以下方法都是通过application/admin/library/traits/Backend.php引入的
+基类中所定义的方法如下，以下方法都是通过 application/admin/library/traits/Backend.php 引入的
 
 ``` php
 class Backend extends Controller{
@@ -269,7 +370,7 @@ class Backend extends Controller{
 ```
 
 *** 属性和方法
-当我们的控制器继承自app\common\controller\Backend以后，我们就可以使用以下属性
+当我们的控制器继承自 app\common\controller\Backend 以后，我们就可以使用以下属性
 ``` php
 /**
  * 无需登录的方法,同时也就不需要鉴权了
@@ -307,9 +408,9 @@ protected $relationSearch = false;
 
 /**
  * 是否开启数据限制
- * 支持auth/personal
+ * 支持 auth/personal
  * 表示按权限判断/仅限个人 
- * 默认为禁用,若启用请务必保证表中存在admin_id字段
+ * 默认为禁用,若启用请务必保证表中存在 admin_id 字段
  */
 protected $dataLimit = false;
 
@@ -319,7 +420,7 @@ protected $dataLimit = false;
 protected $dataLimitField = 'admin_id';
 
 /**
- * 是否开启Validate验证
+ * 是否开启 Validate 验证
  */
 protected $modelValidate = false;
 
@@ -329,14 +430,14 @@ protected $modelValidate = false;
 protected $modelSceneValidate = false;
 
 /**
- * Multi方法可批量修改的字段
+ * Multi 方法可批量修改的字段
  */
 protected $multiFields = 'status';
 ```
 
-我们可以直接在当前控制器使用$this->属性名来调用所支持的属性，也支持直接在当前控制器定义相关属性来覆盖父类的属性，同时TP5中\think\Controller所支持的属性也全部支持。
+我们可以直接在当前控制器使用$this->属性名来调用所支持的属性，也支持直接在当前控制器定义相关属性来覆盖父类的属性，同时 TP5 中\think\Controller 所支持的属性也全部支持。
 
-基类app\common\controller\Backend中所支持的方法如下
+基类 app\common\controller\Backend 中所支持的方法如下
 ``` php
 /**
  * 加载语言文件
@@ -366,8 +467,8 @@ protected function buildparams($searchfields = null, $relationSearch = null)
 }
 
 /**
- * 获取数据限制的管理员ID
- * 禁用数据限制时返回的是null
+ * 获取数据限制的管理员 ID
+ * 禁用数据限制时返回的是 null
  * @return mixed
  */
 protected function getDataLimitAdminIds()
@@ -375,9 +476,9 @@ protected function getDataLimitAdminIds()
 }
 
 /**
- * Selectpage的实现方法
+ * Selectpage 的实现方法
  * 
- * 当前方法只是一个比较通用的搜索匹配,请按需重载此方法来编写自己的搜索逻辑,$where按自己的需求写即可
+ * 当前方法只是一个比较通用的搜索匹配,请按需重载此方法来编写自己的搜索逻辑,$where 按自己的需求写即可
  * 这里示例了所有的参数，所以比较复杂，实现上自己实现只需简单的几行即可
  * 
  */
@@ -385,32 +486,32 @@ protected function selectpage()
 {
 }
 ```
-我们可以直接在当前控制器使用$this->方法名()来调用所支持的方法，同时TP5中\think\Controller所支持的方法也全部支持。
+我们可以直接在当前控制器使用$this->方法名()来调用所支持的方法，同时 TP5 中\think\Controller 所支持的方法也全部支持。
 
 *** 数据限制
-在后台开发的过程中经常会有这样的一个需求，每个管理员单独管理自己添加的数据或单独管理自己下级管理员添加的数据，管理员之间的数据是不相通的，每个管理员看到的数据是不同的。在FastAdmin中可以很方便的实现此功能。
+在后台开发的过程中经常会有这样的一个需求，每个管理员单独管理自己添加的数据或单独管理自己下级管理员添加的数据，管理员之间的数据是不相通的，每个管理员看到的数据是不同的。在 FastAdmin 中可以很方便的实现此功能。
 
 首先我们需要在当前控制器添加以下两个属性
 ``` php
-protected $dataLimit = 'auth'; //默认基类中为false，表示不启用，可额外使用auth和personal两个值
+protected $dataLimit = 'auth'; //默认基类中为 false，表示不启用，可额外使用 auth 和 personal 两个值
 protected $dataLimitField = 'admin_id'; //数据关联字段,当前控制器对应的模型表中必须存在该字段
 $dataLimit = false; //表示不启用，显示所有数据
 $dataLimit = 'auth'; //表示显示当前自己和所有子级管理员的所有数据
 $dataLimit = 'personal'; //表示仅显示当前自己的数据
-$dataLimitField字段默认为admin_id，请注意添加该字段类型为int(10)。
+$dataLimitField 字段默认为 admin_id，请注意添加该字段类型为 int(10)。
 ```
-通过以上配置后，在列表加载数据的时候将默认添加条件过滤不属于自己权限的数据，同时在添加时会自动维护admin_id的数据，在编辑、删除的时候会自动控制权限避免越权操作。
+通过以上配置后，在列表加载数据的时候将默认添加条件过滤不属于自己权限的数据，同时在添加时会自动维护 admin_id 的数据，在编辑、删除的时候会自动控制权限避免越权操作。
 
-如果需要将原有的数据加入到FastAdmin后台管理权限控制当中，比如已有的数据已经有标识归属，但这个归属体系并非是FastAdmin的后台管理员体系。在这个时候我们就需要重写基类的getDataLimitAdminIds方法，将此方法返回数据标识的归属ID数组集合，这样即可使用FastAdmin的后台管理权限进行管理。
+如果需要将原有的数据加入到 FastAdmin 后台管理权限控制当中，比如已有的数据已经有标识归属，但这个归属体系并非是 FastAdmin 的后台管理员体系。在这个时候我们就需要重写基类的 getDataLimitAdminIds 方法，将此方法返回数据标识的归属 ID 数组集合，这样即可使用 FastAdmin 的后台管理权限进行管理。
 
 *** 关联查询
-目前FastAdmin后台index方法支持一对一关联查询，比如我们一篇文章有归属分类，我们在列出数据时需要同时列表文章分类名称。
+目前 FastAdmin 后台 index 方法支持一对一关联查询，比如我们一篇文章有归属分类，我们在列出数据时需要同时列表文章分类名称。
 
 首先我们需要在当前控制器中添加以下属性
 ``` php
 protected $relationSearch = true;
 ```
-然后我们修改控制器的index方法，代码如下：
+然后我们修改控制器的 index 方法，代码如下：
 ``` php
 public function index()
 {
@@ -435,16 +536,16 @@ public function index()
     return $this->view->fetch();
 }
 ```
-然后在控制器对应的model(非关联model)中添加以下代码：
+然后在控制器对应的 model(非关联 model)中添加以下代码：
 ``` php
 public function category()
 {
     return $this->belongsTo('Category', 'category_id')->setEagerlyType(0);
 }
 ```
-更多的关联用户可以参考TP5关联模型的章节：关联模型
+更多的关联用户可以参考 TP5 关联模型的章节：关联模型
 
-我们在控制器对应的JS中可以直接使用category.id、category.name等关联表的字段
+我们在控制器对应的 JS 中可以直接使用 category.id、category.name 等关联表的字段
 ``` php
 // 初始化表格
 table.bootstrapTable({
@@ -466,32 +567,32 @@ table.bootstrapTable({
 
 
 *** 数据校验
-在FastAdmin中默认的add/edit方法可以使用模型验证，验证器位于application/admin/validate/模型名.php中，模型验证默认是关闭的状态，如果需要启用，我们需要在当前控制器定义以下属性
+在 FastAdmin 中默认的 add/edit 方法可以使用模型验证，验证器位于 application/admin/validate/模型名.php 中，模型验证默认是关闭的状态，如果需要启用，我们需要在当前控制器定义以下属性
 ``` php
-protected $modelValidate = true; //是否开启Validate验证，默认是false关闭状态
-protected $modelSceneValidate = true; //是否开启模型场景验证，默认是false关闭状态
+protected $modelValidate = true; //是否开启 Validate 验证，默认是 false 关闭状态
+protected $modelSceneValidate = true; //是否开启模型场景验证，默认是 false 关闭状态
 ```
-当开启模型验证后，我们的添加和修改操作都会首先进行模型验证，验证不通过将会抛出错误信息，具体的模型验证规则可以参考TP5官方文档的模型验证规则：https://www.kancloud.cn/manual/thinkphp5/129355
+当开启模型验证后，我们的添加和修改操作都会首先进行模型验证，验证不通过将会抛出错误信息，具体的模型验证规则可以参考 TP5 官方文档的模型验证规则：https://www.kancloud.cn/manual/thinkphp5/129355
 
-场景验证可以参考TP5场景验证章节：https://www.kancloud.cn/manual/thinkphp5/129322
+场景验证可以参考 TP5 场景验证章节：https://www.kancloud.cn/manual/thinkphp5/129322
 *** 权限控制
 在基类中我们有定义以下两个属性
 ``` php
 protected $noNeedLogin = []; //无需登录的方法,同时也就不需要鉴权了
 protected $noNeedRight = []; //无需鉴权的方法,但需要登录
 ```
-比如我们有定义一个方法mywork，而这个方法是不需要登录即可访问的，则我们需要在当前的控制器定义
+比如我们有定义一个方法 mywork，而这个方法是不需要登录即可访问的，则我们需要在当前的控制器定义
 ``` php
 protected $noNeedLogin = ['mywork'];
 ```
-比如我们有定义一个方法mytest，而这个方法是需要登录后任何管理员都可以访问，则我们需要在当前的控制器定义
+比如我们有定义一个方法 mytest，而这个方法是需要登录后任何管理员都可以访问，则我们需要在当前的控制器定义
 ``` php
 protected $noNeedRight = ['mytest'];
 ```
-如果我们需要动态定义，请务必放在调用父类的_initialize方法之前，否则是不会生效的。
+如果我们需要动态定义，请务必放在调用父类的_initialize 方法之前，否则是不会生效的。
 
 *** 视图渲染
-基类app\common\controller\Backend会默认渲染以下几个对象到视图中
+基类 app\common\controller\Backend 会默认渲染以下几个对象到视图中
 ``` php 
 //渲染站点配置
 $this->assign('site', $site);
@@ -504,34 +605,34 @@ $this->assign('admin', Session::get('admin'));
 ```
 我们可以在视图中使用{$site.name}、{$config.modulename}、{$auth.id}、{$admin.username}来获取我们所需要的数据
 
-$site所支持的数据对应为application/extra/site.php
+$site 所支持的数据对应为 application/extra/site.php
 ``` php
-$config所支持的数据为
-'site'           => $site中的'name', 'cdnurl', 'version', 'timezone', 'languages'字段,
-'upload'         => application/extra/upload.php中数据,
+$config 所支持的数据为
+'site'           => $site 中的'name', 'cdnurl', 'version', 'timezone', 'languages'字段,
+'upload'         => application/extra/upload.php 中数据,
 'modulename'     => 'admin',
 'controllername' => 控制器名,
 'actionname'     => 方法名,
-'jsname'         => 控制器JS所加载的路径,
-'moduleurl'      => 后台module的链接,
+'jsname'         => 控制器 JS 所加载的路径,
+'moduleurl'      => 后台 module 的链接,
 'language'       => 当前语言,
-'fastadmin'      => application/config.php中fastadmin的配置
+'fastadmin'      => application/config.php 中 fastadmin 的配置
 ```
 
-$auth是一个对象，所对应的类是application/admin/library/Auth.php
-$admin是一个当前管理员登录的session数据，存储有管理员的用户名、昵称、ID、头像等信息
-如果我们需要在JS中使用以上数据，则使用
+$auth 是一个对象，所对应的类是 application/admin/library/Auth.php
+$admin 是一个当前管理员登录的 session 数据，存储有管理员的用户名、昵称、ID、头像等信息
+如果我们需要在 JS 中使用以上数据，则使用
 ``` js
 Config.site.name
 Config.modulename
 ```
 来获取相关的配置信息
 
-如果我们需要自己在控制器中透传数据到JS中去，则可以使用控制器的assignconfig方法来透传，使用如下
+如果我们需要自己在控制器中透传数据到 JS 中去，则可以使用控制器的 assignconfig 方法来透传，使用如下
 ``` php
 $this->assignconfig('demo', ['name'=>'名称']);
 ```
-然后我们就可以在JS中使用
+然后我们就可以在 JS 中使用
 ``` js
 Config.demo.name
 ```
@@ -540,11 +641,11 @@ Config.demo.name
 ** 模块
 *** 前台
 **** 会员模块
-FastAdmin的前台自带一个简单的会员功能模块，可以进行会员的注册、登录、找回密码、会员中心、修改个人资料、修改密码等操作。
+FastAdmin 的前台自带一个简单的会员功能模块，可以进行会员的注册、登录、找回密码、会员中心、修改个人资料、修改密码等操作。
 
-会员模块可用于进行前台会员功能开发时使用。此处的会员模块和API中的会员模块账号是相通的，但他们登录时是不会互相影响的，可以同时登录。
+会员模块可用于进行前台会员功能开发时使用。此处的会员模块和 API 中的会员模块账号是相通的，但他们登录时是不会互相影响的，可以同时登录。
 
-FastAdmin的会员模块有注册几个事件，我们可以在事件中自定义我们的操作。你可以按照以下的方式监听相应的事件行为
+FastAdmin 的会员模块有注册几个事件，我们可以在事件中自定义我们的操作。你可以按照以下的方式监听相应的事件行为
 ``` php
 //登录成功后的事件
 Hook::add('user_login_successed', function ($user) {
@@ -561,42 +662,42 @@ Hook::add('user_logout_successed', function ($user) {
 ```
 
 *** 公共
-**** Token验证
+**** Token 验证
 ***** 功能介绍
-Token验证主要用于会员登录状态信息的维护和验证，通常情况下不需要我们调用此类的方法，在一些特殊情况下我们可以手动调用。
+Token 验证主要用于会员登录状态信息的维护和验证，通常情况下不需要我们调用此类的方法，在一些特殊情况下我们可以手动调用。
 
 ***** 使用示例
-获取Token信息
-获取Token的详情、关联的会员ID、过期时间、有效期等信息
+获取 Token 信息
+获取 Token 的详情、关联的会员 ID、过期时间、有效期等信息
 ``` php
 Token::get('c2259a37-5fee-4c4b-93b0-1d7313e1d1ac');
 ```
-设置会员的Token信息
-新增会员Token并更新，且有效期为3600秒
+设置会员的 Token 信息
+新增会员 Token 并更新，且有效期为 3600 秒
 ``` php
 Token::set('c2259a37-5fee-4c4b-93b0-1d7313e1d1ac', 1, 3600);
 ```
-判断会员Token是否可用
-通过Token和会员ID来判断Token是否可以使用
+判断会员 Token 是否可用
+通过 Token 和会员 ID 来判断 Token 是否可以使用
 ``` php
 Token::check('c2259a37-5fee-4c4b-93b0-1d7313e1d1ac', 1);
 ```
-删除单个会员Token
-删除指定的Token
+删除单个会员 Token
+删除指定的 Token
 ``` php
 Token::delete('c2259a37-5fee-4c4b-93b0-1d7313e1d1ac');
 ```
-删除指定会员的所有Token
-删除会员ID为1的所有Token
+删除指定会员的所有 Token
+删除会员 ID 为 1 的所有 Token
 ``` php
 Token::clear(1);
 ```
 **** 邮件发送
 功能介绍
-FastAdmin中的邮件发送采用phpmailer进行邮件发送，在使用邮件发送功能前请先在后台常规管理->系统配置中配置好邮件的相关信息。
+FastAdmin 中的邮件发送采用 phpmailer 进行邮件发送，在使用邮件发送功能前请先在后台常规管理->系统配置中配置好邮件的相关信息。
 
 使用示例
-首先我们需要采用单例或实例化一个Email对象
+首先我们需要采用单例或实例化一个 Email 对象
 ``` php
 $email = new \app\common\library\Email;
 ```
@@ -613,9 +714,9 @@ $email->getError();
 
 **** 短信发送
 功能介绍
-在我们开发过程中经常会用到短信发送和短信推广的功能，FastAdmin提供了一个简单实用的短信接口供开发者调用。
+在我们开发过程中经常会用到短信发送和短信推广的功能，FastAdmin 提供了一个简单实用的短信接口供开发者调用。
 
-在使用短信发送之前，务必在后台安装好我们短信服务商的插件，如果我们要使用的服务商未提供有FastAdmin的插件，我们则需要自己开发一个，或注册一个sms_send和sms_check的事件用于我们的发送和检测操作。
+在使用短信发送之前，务必在后台安装好我们短信服务商的插件，如果我们要使用的服务商未提供有 FastAdmin 的插件，我们则需要自己开发一个，或注册一个 sms_send 和 sms_check 的事件用于我们的发送和检测操作。
 
 使用示例
 首先最常用的是发送短信，比如我们发送一个注册验证码
@@ -631,7 +732,7 @@ $email->getError();
 
 > Sms::flush('13888888888', 'register');
 **** 辅助函数
-在FastAdmin中我们有提供几个常用的辅助函数。
+在 FastAdmin 中我们有提供几个常用的辅助函数。
 
 ``` php
 /**
@@ -676,7 +777,7 @@ function human_date($time, $local = null)
 }
 
 /**
- * 获取上传资源的CDN的地址
+ * 获取上传资源的 CDN 的地址
  * @param string $url 资源相对地址
  * @return string
  */
@@ -738,33 +839,32 @@ function var_export_short($var, $indent = "")
 
 
 
-
 ** 组件
-FastAdmin默认集成了多个第三方组合，如表单验证、文件上传、下拉列表、时间选择、城市选择、Selectpage，所有的组件都必须使用Form.api.bindevent("form[role=form]")来进行初始化，如果不进行初始化是无法对相应组件进行渲染和事件绑定。
+FastAdmin 默认集成了多个第三方组合，如表单验证、文件上传、下拉列表、时间选择、城市选择、Selectpage，所有的组件都必须使用 Form.api.bindevent("form[role=form]")来进行初始化，如果不进行初始化是无法对相应组件进行渲染和事件绑定。
 
 如果我们想单独为元素绑定事件和渲染，我们可以使用如下的代码
 
 | 组件         | 代码                                   | 介绍                               |
 |--------------+----------------------------------------+------------------------------------|
-| 文件上传     | Form.events.plupload($("form"));       | 渲染并绑定form中的上传组件         |
-| 动态下拉列表 | Form.events.selectpage($("form"));     | 渲染并绑定form中的Selectpage组件   |
-| 表单验证     | Form.events.validator($("form"));      | 渲染并绑定form中的表单验证         |
-| 城市选择     | Form.events.citypicker($("form"));     | 渲染并绑定form中的城市选择组件     |
-| 日期时间     | Form.events.datetimepicker($("form")); | 渲染并绑定form中的日期时间组件     |
-| 下拉列表     | Form.events.selectpicker($("form"));   | 渲染并绑定form中的Selectpicker组件 |
-| 附件选择     | Form.events.faselect($("form"));       | 渲染并绑定form中的选择附件组件     |
-| 键值组件     | Form.events.fieldlist($("form"));      | 渲染并绑定form中的键值组件         |
-| 开关组件     | Form.events.switcher($("form"));       | 渲染并绑定form中的开关组件         |
-| 滑块组件     | Form.events.slider($("form"));         | 渲染并绑定form中的滑块组件         |
+| 文件上传     | Form.events.plupload($("form"));       | 渲染并绑定 form 中的上传组件         |
+| 动态下拉列表 | Form.events.selectpage($("form"));     | 渲染并绑定 form 中的 Selectpage 组件   |
+| 表单验证     | Form.events.validator($("form"));      | 渲染并绑定 form 中的表单验证         |
+| 城市选择     | Form.events.citypicker($("form"));     | 渲染并绑定 form 中的城市选择组件     |
+| 日期时间     | Form.events.datetimepicker($("form")); | 渲染并绑定 form 中的日期时间组件     |
+| 下拉列表     | Form.events.selectpicker($("form"));   | 渲染并绑定 form 中的 Selectpicker 组件 |
+| 附件选择     | Form.events.faselect($("form"));       | 渲染并绑定 form 中的选择附件组件     |
+| 键值组件     | Form.events.fieldlist($("form"));      | 渲染并绑定 form 中的键值组件         |
+| 开关组件     | Form.events.switcher($("form"));       | 渲染并绑定 form 中的开关组件         |
+| 滑块组件     | Form.events.slider($("form"));         | 渲染并绑定 form 中的滑块组件         |
 
-如果是动态生成的元素，默认是没有绑定事件的，可以使用上述的代码进行绑定事件。其中$("form")为所需绑定事件元素的父级元素，并不限定为必须是一个form，也可以是个div或p元素。
+如果是动态生成的元素，默认是没有绑定事件的，可以使用上述的代码进行绑定事件。其中$("form")为所需绑定事件元素的父级元素，并不限定为必须是一个 form，也可以是个 div 或 p 元素。
 
 *** 参数列表
-Form.api.bindevent共有四个元素，分别如下：
+Form.api.bindevent 共有四个元素，分别如下：
 
 | 名称    | 类型           | 说明                                                      |
 |---------+----------------+-----------------------------------------------------------|
-| form    | string、object | 元素容器，并不限定一定是个form元素，也可以是div或其它元素 |
+| form    | string、object | 元素容器，并不限定一定是个 form 元素，也可以是 div 或其它元素 |
 | success | function       | 成功后的回调，回调参数：data,ret                          |
 | error   | function       | 失败后的回调，回调参数：data,ret                          |
 | submit  | function       | 提交前的回调，回调参数：success,error                     |
@@ -772,15 +872,15 @@ Form.api.bindevent共有四个元素，分别如下：
 *** 常规用法
 ``` php
 Form.api.bindevent($("form"), function(data,ret){
-    //成功的回调,如果返回false,将不会出现提示消息
+    //成功的回调,如果返回 false,将不会出现提示消息
     //return false;
 }, function(data, ret){
-    //失败的回调,如果返回false,将不会出现提示消息
+    //失败的回调,如果返回 false,将不会出现提示消息
     //return false;
 }, function(success, error){
-    //如果返回falsle,将阻止表单的提交
+    //如果返回 falsle,将阻止表单的提交
     //return false;
-    //如果处理成功后我们可以使用Form.api.submit(this, success, error);再次提交表单
+    //如果处理成功后我们可以使用 Form.api.submit(this, success, error);再次提交表单
 });
 ```
 *** 单独绑定组件
@@ -795,17 +895,17 @@ require(['form'], function(Form){
 ** 表格
 *** 依赖
 
-在FastAdmin中如果需要使用Bootstrap-table，需要使用require引入table模块。table模块对应的是assets/js/require-table.js文件，FastAdmin做了许多通用方法和默认值操作。
+在 FastAdmin 中如果需要使用 Bootstrap-table，需要使用 require 引入 table 模块。table 模块对应的是 assets/js/require-table.js 文件，FastAdmin 做了许多通用方法和默认值操作。
 
 **** 载入依赖
 ``` js
 require(['table'], function(Table){
     //编写实例化代码
-    //使用Table对象
+    //使用 Table 对象
 });
 ```
-**** 引入CSS
-由于表格列表常用于后台管理列表，后台已经默认引入了表格相关的CSS文件，在前台未引入相关的CSS文件，如果你需要在前台使用到Bootstrap-table，则需要手动载入表格相关的CSS文件。如下：
+**** 引入 CSS
+由于表格列表常用于后台管理列表，后台已经默认引入了表格相关的 CSS 文件，在前台未引入相关的 CSS 文件，如果你需要在前台使用到 Bootstrap-table，则需要手动载入表格相关的 CSS 文件。如下：
 ``` html
 <link rel="stylesheet" type="text/css" href="__CDN__/assets/libs/bootstrap-table/dist/bootstrap-table.min.css"/>
 ```
@@ -817,45 +917,45 @@ require(['table'], function(Table){
 
 
 
-*** Table对象
-我们引入表格依赖后table后，我们就可以通过Table来进行相关表格的初始化和绑定相关事件。
-返回的Table对象包括以下几个对象：
+*** Table 对象
+我们引入表格依赖后 table 后，我们就可以通过 Table 来进行相关表格的初始化和绑定相关事件。
+返回的 Table 对象包括以下几个对象：
 ``` json
 {
     list:[], //实例化的表格对象列表
     defaults:{}, //默认表格参数
     columnDefaults:{}, //默认列参数
-    config:{}, //相关按钮的DOM选择类
+    config:{}, //相关按钮的 DOM 选择类
     button:{}, //默认编辑、删除、排序按钮配置
-    api:{} //封装的API方法
+    api:{} //封装的 API 方法
 }
 ```
 **** Table.list
-其中Table.list存储的是表格实例化后的对象。比如我们实例化的表格有个id="mytable"的属性，则我们可以通过
+其中 Table.list 存储的是表格实例化后的对象。比如我们实例化的表格有个 id="mytable"的属性，则我们可以通过
 
 > Table.list['mytable']
-来获取此表格的Bootstrap-table的对象。
+来获取此表格的 Bootstrap-table 的对象。
 
 **** Table.defaults
-Table.defaults是指Bootstrap-table表格参数默认值。修改单一的值，我们可以直接通过
+Table.defaults 是指 Bootstrap-table 表格参数默认值。修改单一的值，我们可以直接通过
 
 > Table.defaults.showExport = false;
 来进行修改
 
 **** Table.columnDefaults
-Table.columnDefaults是指Bootstrap-table表格列参数默认值修改单一的值，我们可以直接通过
+Table.columnDefaults 是指 Bootstrap-table 表格列参数默认值修改单一的值，我们可以直接通过
 
 > Table.columnDefaults.align = 'left';
 来进行修改
 
 **** Table.config
-Table.config是指表格使用到的按钮和工具栏的DOM选择类，一般情况下不建议修改。
+Table.config 是指表格使用到的按钮和工具栏的 DOM 选择类，一般情况下不建议修改。
 
 **** Table.button
-Table.button是指表格默认编辑、删除、挺拽按钮的配置信息，一般情况下不建议修改。
+Table.button 是指表格默认编辑、删除、挺拽按钮的配置信息，一般情况下不建议修改。
 
 **** Table.api
-Table.api封装了表格常用的方法、单元格事件及渲染方法。在表格中会经常使用到。
+Table.api 封装了表格常用的方法、单元格事件及渲染方法。在表格中会经常使用到。
 ``` 
 Table.api.init(defaults, columnDefaults, locales) //此方法用于初始化表格默认配置、表格列配置、写入语言包等操作
 Table.api.bindevent(table) //此方法用于为表格中的元素绑定相关事件
@@ -864,22 +964,22 @@ Table.api.events.operate //操作栏单元格方法
 Table.api.events.image //图片栏单元格方法
 Table.api.formatter //格式化方法，后面单独介绍
 Table.api.buttonlink(column, buttons, value, row, index, type) //按钮链接生成，内部使用
-Table.api.replaceurl(url, row, table) //替换URL中的数据
-Table.api.selectedids(table) //获取选中的条目ID集合
+Table.api.replaceurl(url, row, table) //替换 URL 中的数据
+Table.api.selectedids(table) //获取选中的条目 ID 集合
 Table.api.toggleattr(table) //切换复选框状态
 Table.api.getrowdata(table, index) //根据行索引获取行数据
 Table.api.getrowbyindex(table, index) //根据行索引获取行数据
-Table.api.getrowbyid(table, id) //根据主键ID获取行数据
+Table.api.getrowbyid(table, id) //根据主键 ID 获取行数据
 ```
 **** Table.api.formatter
-Table.api.formatter封装了许多FastAdmin表格列表中常用的单元格数据渲染的方法。
+Table.api.formatter 封装了许多 FastAdmin 表格列表中常用的单元格数据渲染的方法。
 ```
 Table.api.formatter.icon //渲染成图标按钮
 Table.api.formatter.image //渲染成单张图片
 Table.api.formatter.images //渲染成多张图片
 Table.api.formatter.content //内容自动截取
 Table.api.formatter.status //渲染成状态
-Table.api.formatter.normal //渲染成label
+Table.api.formatter.normal //渲染成 label
 Table.api.formatter.toggle //渲染成开关
 Table.api.formatter.url //渲染成文本框链接
 Table.api.formatter.search //渲染成搜索链接
@@ -896,7 +996,7 @@ Table.api.formatter.buttons //渲染成按钮组
 https://blog.csdn.net/GhostWHS/article/details/110085937
 
 ** 密码
-数据库修改fa_admin表的两个字段
+数据库修改 fa_admin 表的两个字段
 密码(password)：c13f62012fd6a8fdf06b3452a94430e5
 密码盐(salt)：rpR6Bv
 登录密码是 123456
@@ -947,8 +1047,8 @@ https://blog.csdn.net/GhostWHS/article/details/110085937
     protected $noNeedLogin = ['init','upload'];
 ```
 
-*** fastadmin关闭验证码登录
-把配置文件config.php中的 fastadmin => login_captcha 改为false
+*** fastadmin 关闭验证码登录
+把配置文件 config.php 中的 fastadmin => login_captcha 改为 false
 
 
 * 上传文件
