--- a/关于人/人.org
+++ b/关于人/人.org
@@ -1,3 +1,5 @@
+** 想法
+
 人是一个有着短暂生命的生物。
 
 人要吃喝玩乐，前提是有钱有闲。
@@ -20,13 +22,18 @@
 
 我能抓到的是商品，还有商业服务。其它一概抓不到
 
+人的痛苦与幸福，与人的需求有关，有些东西，不要因为得不到而感到痛苦，因为有些东西是永远也得不到的。
 ** 如何去改变
- ABC理论
--  A代表情感情绪：强化高峰体验，提供情感动力。
--  B代表行为行动：走出自己的舒适区，做你害怕的事，害怕就会消失。
-- C代表认知、思维 ：认识到自己脑子中存在不少根深蒂固但未必正确的观念。
+ ABC 理论
+-  A 代表情感情绪：强化高峰体验，提供情感动力。
+-  B 代表行为行动：走出自己的舒适区，做你害怕的事，害怕就会消失。
+- C 代表认知、思维 ：认识到自己脑子中存在不少根深蒂固但未必正确的观念。
 
  
 ** 运动
 
    - 运动促使大脑活跃，提高精气神
+
+** 只有自己才能救自己 ( 思想统一 )
+
+ 
